--- a/src/css/style.css
+++ b/src/css/style.css
@@ -3,19 +3,25 @@
     align-items: center;
     justify-content: center;
     flex-wrap: wrap;
-  }
+}
   
-  .board {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-column-gap: 2px;
-    grid-row-gap: 2px;
-  }
+.board {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-column-gap: 2px;
+   grid-row-gap: 2px;
+}
   
-  .cell {
-    width: 140px;
-    height: 140px;
-    border: 1px solid black;
-    background-color: gray;
-    border-radius: 50px;
-  }
+.cell {
+  width: 140px;
+  height: 140px;
+  border: 1px solid black;
+  background-color: gray;
+  border-radius: 50px;
+}
+
+.cell__active {
+  background-image: url('../img/goblin.png');
+  background-size: cover;
+  background-repeat: no-repeat;
+}
