--- a/src/css/style.css
+++ b/src/css/style.css
@@ -25,3 +25,82 @@
   background-size: cover;
   background-repeat: no-repeat;
 }
+
+/* ............... */
+
+.header {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin-bottom: 10px;
+}
+
+.scores {
+  margin-left: 3px;
+}
+
+.misses {
+  margin-left: 10px;
+}
+
+.heading {
+  color: darkgrey;
+  font-size: 16px;
+  font-weight: bold;
+  text-transform: uppercase;
+}
+
+.scores {
+  color: black;
+  font-size: 18px;
+  font-weight: bold;
+}
+
+.game_end {
+  position: fixed;
+  top: 100px;
+  right: 50%;
+  display: flex;
+  flex-wrap: wrap;
+  transform: translate(50%, 0);
+
+  width: 400px;
+  height: 200px;
+  border: 1px solid gray;
+  background-color: white;
+  border-radius: 5px;
+  justify-content: center;
+  align-items: center;
+}
+
+.game_end_display {
+  display: none;
+}
+
+.game_end_span{
+  display: inline-block;
+  width: 100%;
+  text-align: center;
+
+  color: gray;
+  font-size: 30px;
+  font-weight: bold;
+}
+
+.button{
+  width: 100%;
+  height: 48px;
+  border: none;
+  margin-right: 3px;
+  margin-left: 3px;
+
+  font-size: 14px;
+  font-weight: bold;
+  text-transform: uppercase;
+  background-color: gray;
+  color: white;
+}
+
+.button:hover {
+  background-color: black;
+}
